--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,11 +1,11 @@
 body {
-	background-color: whitesmoke;
+	background-color: #F7E9DB;
 }
 
 h1{
-	color: darkblue;
+	color: #1E507C;
 }
 
 p{
-	color:slategray;
+	color:#AB9A86;
 }
