--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -1,12 +1,28 @@
-@import url('https://fonts.googleapis.com/css?family=Cardo|Crimson+Text|Josefin+Sans|Lora');
+@import url('https://fonts.googleapis.com/css?family=Cardo|Crimson+Text|Josefin+Sans|Lora|Montserrat');
 
 body {
-	background-color: #FFE8D2;
+	background-color: #DADACE;
 	text-align:center;
 	font-family: 'Lora', serif;
 	font-size: 18px;
 	line-height: 1.5em;
 	color: #243F59;
+}
+
+a{
+	text-decoration: none;
+	display: block;
+	float: left;
+	padding: 0 20px;
+}
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	content= " ";
+	clear: both;
+	height: 0;
+	font-size: 0;
 }
 
 img{
@@ -19,19 +35,15 @@ h1{
 	font-weight:normal;
 	font-size:50px;
 	line-height:0.5em
-	color: #4A87C0;
+	color: #D88779;
 }
 
-h2{
-	font-size: 1em;
-	font-style: italic;
-	color:#9E917C;
-	font-weight:lighter;
-	line-height:0.1em;
-}
-
-aside{
-	color: #3A76AB;
+article{
+	font-family: montserrat, sans-serif;
+	font-size: 0.9em;
+	text-transform: uppercase;
+	margin: auto;
+	padding: 0 20%;
 }
 
 ul{
@@ -41,24 +53,19 @@ ul{
 }
 
 li{
-	float:left;
 	width: 50%;
 	height: 50%;
-	outline: 2px solid white;
+	margin: auto;
 	text-align: center;
 	line-height: 4em;
 	font-color: white;
-	background-color: #5490C2;
-}
-
-nav a{
-	text-decoration: none;
-	display: inline;
-	margin: 1.8em;
 }
 
 footer {
+	font-family: montserrat, sans-serif;
+	font-size: 0.7em;
 	text-align: center;
+	text-transform: uppercase;
 	display: block;
 	padding: 10px 0 10px 10px;
 }
